--- a/styles/globals.css
+++ b/styles/globals.css
@@ -194,10 +194,11 @@ input[type=number] {
       opacity: 0;
   }
 }
-input[type="date"]::-webkit-clear-button {
-  -webkit-appearance: none;
-   display: none;
- }
+input[type="date"]::-webkit-inner-spin-button,
+input[type="date"]::-webkit-calendar-picker-indicator {
+    display: none;
+    -webkit-appearance: none;
+}
 
 .remove_animation {
     -webkit-animation-name: remove_animation;
